--- a/GrandTheftAuto/GTA.html
+++ b/GrandTheftAuto/GTA.html
@@ -15,7 +15,7 @@
 		<h3>Hvað er Grand Theft Auto?</h3>
 		<br>
 		<hr>
-		<p>Grand Theft Auto er tölvuleikjasería og allir leikirnir eru open world action-adventure og þeir hafa komið út á margar mismunandi leikjatölvur (Playstation, Xbox og PC). Leikurinn fjallar hins vegar um það að spilendurnir hafa mörg vopn þ.a.e.s byssur og hnífa, og nota þeir þau til að drepa, ræna og fleira.</p>
+		<p>Grand Theft Auto er tölvuleikjasería og allir leikirnir eru open world action-adventure. þeir hafa komið út á margar mismunandi leikjatölvur (Playstation, Xbox og PC). Leikirnir fjalla um glæpamenn sem framkvæma glæpi af öllum gerðum. Spilendur hafa aðgang að allskyns vopnum, og farartækjum til að ferðast um staðina sem þeir hafa aðgang að.</p>
 	</div>
 
 	<br>
@@ -78,7 +78,7 @@
 		<h3>Hverjar eru framtíðarhorfur leiksins?</h3>
 		<br>
 		<hr>
-		<p>Framtíðarhorfur leikjaseríunnar eru bjartar. GTA V er í top 4 mest seldu leikjum allra tíma og hann er ennþá mjög mikið spilaður víða á heimsvísu. Rockstar Games munu halda áfram að framleiða leikinn og eru því að vinna í sjötta leiknum.</p>
+		<p>Framtíðarhorfur leikjaseríunnar eru bjartar. GTA V er í top 4 mest seldu leikjum allra tíma og hann er ennþá mikið spilaður víða á heimsvísu. Rockstar Games eru ennþá að uppfæra GTA V og eru byrjaðir að búa til sjötta leikinn í seríunni.</p>
 	</div>
 
 	<br>
